--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
-    "presets": [
+  "presets":[
       "@babel/preset-env",
       "@babel/preset-react"
+  ],
+  "plugins": [
+      "@babel/plugin-transform-runtime"
     ]
-  }
+  
+}
